Fix the nav menu overlapping in mobile

--- a/styles/lxqt.scss
+++ b/styles/lxqt.scss
@@ -189,7 +189,6 @@
 		{
 			display: none;
 			clear: both;
-			height: 3em;
 			margin: 0;
 			padding: 0.5em;
 			
